--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 </head>
 
 <body>
-  <div class="header">
-    <h1>Project Euler</h1>
+
+  <div class="project-euler-logo">
+    <img src="images/Project-Euler-logo.png">
+    <div class="login-details">
+      <p>Welcome, <strong>Mamoshebe</strong> | <a href="#">Logout</a></p>
+    </div>
   </div>
+ 
      <!---Switching tabs-->
   <div class="container mt-5">
     <ul class="nav nav-tabs" id="assessmentTabs">
@@ -43,10 +48,10 @@
         <input type="text" id="answer1" placeholder="Enter your answer">
         <button onclick="checkAnswer(1)">Check Answer</button>
         <p id="result1"></p>
-        <hr>
+      
 
-
-        <div class="container2">
+        <!--user  inputs-->
+        <!-- <div class="container2">
         <h2>Enter two numbers and a maximum value</h2>
         <label for="num1 " >Enter the first number:</label>
         <input type="number" id="num1"><br><br>
@@ -62,8 +67,7 @@
         <button onclick="calculateSum()">Calculate Sum</button><br><br>
     
         <div id="result">
-        </div>
-
+        </div> -->
       </div>
 
       <!---Problem 2 tab-->
@@ -99,6 +103,12 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="container">
+      <p>&copy; Project Euler. All rights reserved.</p>
+      <p><a href="#">Privacy Policy</a></p>
+    </div>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="scripts.js" defer></script>
