--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       
 
         <!--user  inputs-->
-        <!-- <div class="container2">
+         <div class="container2">
         <h2>Enter two numbers and a maximum value</h2>
         <label for="num1 " >Enter the first number:</label>
         <input type="number" id="num1"><br><br>
@@ -67,7 +67,7 @@
         <button onclick="calculateSum()">Calculate Sum</button><br><br>
     
         <div id="result">
-        </div> -->
+        </div> 
       </div>
 
       <!---Problem 2 tab-->
